src/test/ui/cenum_impl_drop_cast.stderr
error: cannot cast enum `E` into integer `u32` because it implements `Drop`
  --> $DIR/cenum_impl_drop_cast.rs:15:13
   |
LL |     let i = e as u32;
   |             ^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #73333 <https://github.com/rust-lang/rust/issues/73333>
note: the lint level is defined here
  --> $DIR/cenum_impl_drop_cast.rs:1:9
   |
LL | #![deny(cenum_impl_drop_cast)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

Future incompatibility report: Future breakage diagnostic:
error: cannot cast enum `E` into integer `u32` because it implements `Drop`
  --> $DIR/cenum_impl_drop_cast.rs:15:13
   |
LL |     let i = e as u32;
   |             ^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #73333 <https://github.com/rust-lang/rust/issues/73333>
note: the lint level is defined here
  --> $DIR/cenum_impl_drop_cast.rs:1:9
   |
LL | #![deny(cenum_impl_drop_cast)]
   |         ^^^^^^^^^^^^^^^^^^^^

